fix: query params sort limit page status added for all endpoints
